fix: :lipstick: ensure multi-line text is centre aligned

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -76,6 +76,7 @@
 
 .index-page .notion-h1 {
   margin-inline: auto;
+  text-align: center;
   font-size: 2.125em;
 }
 
